# talipot

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  README.rst  appveyor.yml  gcovr.cfg  header.txt  pyproject.toml  version.txt
.circleci/: config.yml
.github/workflows/: appimage-build.yml  archlinux-build.yml  code-coverage.yml  macos-homebrew-build.yml  macos-macports-build.yml  macos-macports-wheels-build.yml  manylinux-wheel-build.yml  python-sdist-build.yml  ubuntu-build.yml  ubuntu-qt6-build.yml  windows-mingw64-build.yml  windows-msvc-build.yml  windows-wheels-build.yml
appveyor/: appveyor_macos.sh  appveyor_msvc.bat
bundlers/linux/: CMakeLists.txt  make_appimage_bundle.sh.in  talipot.appdata.xml  talipot_appimage_centos_build.sh  talipot_python_wheels_manylinux_build.sh
bundlers/mac/: CMakeLists.txt  mac_bundle.sh.in  make_dmg.sh  talipot_python_wheels_macos_build.sh
bundlers/win/: CMakeLists.txt  Talipot.nsi.in  talipot_python_wheels_win_amd64.sh  win_bundle.bat
cmake/: FindGraphviz.cmake  FindQtX.cmake  FindQuaZip.cmake  FindSIP.cmake  FindSIP.py  FindSphinx.cmake  FindTalipot.cmake  TalipotPython.cmake  TalipotUseFile.cmake  cmake_uninstall.cmake.in
demos/clique_import/: cliqueimport.cpp
demos/graph_display/: graph_display.cpp
demos/graph_manipulations/: graphmanipulations.cpp
demos/interactor_plugin/: interactor_plugin.cpp
doc/python/: CMakeLists.txt  conf.py.in  genSphinxDoc.cmake  gen_plugins_doc.py  gettingstarted.rst  graphobservation.rst  index.rst  manual.rst  tabulate.py
plugins/: CMakeLists.txt
plugins/clustering/: CliqueEnumeration.cpp  CliqueEnumeration.h  ConvolutionClustering.cpp  ConvolutionClustering.h  ConvolutionClusteringSetup.cpp  ConvolutionClusteringSetup.h  EqualValueClustering.cpp  EqualValueClustering.h  HierarchicalClustering.cpp  HierarchicalClustering.h  QuotientClustering.cpp  StrengthClustering.cpp  StrengthClustering.h
plugins/colors/: ColorMapping.cpp  DoubleStringsListRelationDialog.cpp  DoubleStringsListRelationDialog.h
plugins/export/: CSVExport.cpp  CSVExport.h  GMLExport.cpp
plugins/glyph/: CMakeLists.txt  billboard.cpp  circle.cpp  cone.cpp  cross.cpp  cube.cpp  cubeoutlinedtransparent.cpp  cylinder.cpp  diamond.cpp  fonticon.cpp  hexagone.cpp  pentagone.cpp  ring.cpp  roundedbox.cpp  sphere.cpp  square.cpp  star.cpp  triangle.cpp  window.cpp
plugins/import/: AdjacencyMatrixImport.cpp  CMakeLists.txt  CompleteGraph.cpp  CompleteTree.cpp  ERRandomGraph.cpp  EmptyGraph.cpp  FileSystem.cpp  GEXFImport.cpp  GMLImport.cpp  GMLParser.h  Grid.cpp  ImportPajek.cpp  ImportUCINET.cpp  PlanarGraph.cpp  RandomGraph.cpp  RandomTree.cpp  RandomTreeGeneral.cpp  SmallWorldGraph.cpp
plugins/interactor/: CMakeLists.txt  InteractorAddEdge.cpp  InteractorDeleteElement.cpp  InteractorEditEdgeBends.cpp  InteractorGetInformation.cpp  InteractorNavigation.cpp  InteractorRectangleZoom.cpp  InteractorSelection.cpp  InteractorSelectionModifier.cpp
plugins/layout/: BubblePack.cpp  BubbleTree.cpp  BubbleTree.h  CMakeLists.txt  Circular.cpp  Circular.h  ConeTreeExtended.cpp  ConeTreeExtended.h  ConnectedComponentsPacking.cpp  ConnectedComponentsPacking.h  DatasetTools.cpp  Dendrogram.cpp  Dendrogram.h  FastOverlapRemoval.cpp  FastOverlapRemoval.h  GEMLayout.cpp  GEMLayout.h  HierarchicalGraph.cpp  HierarchicalGraph.h  ImprovedWalker.cpp  ImprovedWalker.h  MixedModel.cpp  MixedModel.h  Number.cpp  Number.h  OrientableConstants.h  OrientableCoord.cpp  OrientableCoord.h  OrientableLayout.cpp  OrientableLayout.h  OrientableLayoutInterface.h  OrientableSize.cpp  OrientableSize.h  OrientableSizeProxy.cpp  OrientableSizeProxy.h  Orientation.cpp  OrthoTree.cpp  PerfectLayout.cpp  PlanarGraph.h  PolyominoPacking.cpp  (+17 more)
plugins/layout/Graphviz/: CMakeLists.txt  CircoLayout.cpp  DotLayout.cpp  FdpLayout.cpp  GraphvizLayoutBase.h  NeatoLayout.cpp  SfdpLayout.cpp  TwopiLayout.cpp
plugins/metric/: BetweennessCentrality.cpp  BiconnectedComponents.cpp  CMakeLists.txt  ClusterMetric.cpp  ClusterMetric.h  ConnectedComponents.cpp  ConnectedComponents.h  DagLevelMetric.cpp  DagLevelMetric.h  DegreeMetric.cpp  DegreeMetric.h  DepthMetric.cpp  DepthMetric.h  Eccentricity.cpp  Eccentricity.h  IdMetric.cpp  IdMetric.h  KCores.cpp  LeafMetric.cpp  LeafMetric.h  LinkCommunities.cpp  LouvainClustering.cpp  MCLClustering.cpp  NodeMetric.cpp  NodeMetric.h  PageRank.cpp  PathLengthMetric.cpp  PathLengthMetric.h  Random.cpp  Random.h  StrahlerMetric.cpp  StrahlerMetric.h  StrengthMetric.cpp  StrengthMetric.h  StrongComponents.cpp  StrongComponents.h  WelshPowell.cpp
plugins/selection/: BridgesSelection.cpp  CMakeLists.txt  InducedSubGraphSelection.cpp  InducedSubGraphSelection.h  Kruskal.cpp  Kruskal.h  LoopSelection.cpp  LoopSelection.h  MakeSelectionGraph.cpp  (+9 more)
plugins/utils/graphviz/: CMakeLists.txt  GraphvizLayout.cpp  GraphvizUtils.cpp
software/: CMakeLists.txt
software/talipot/: CMakeLists.txt
software/talipot/designer/: AboutDialog.ui  AlgorithmRunnerItem.ui  ExportWizard.ui  ImportWizard.ui  PanelSelectionWizard.ui  PluginInformationListItem.ui  SearchWidget.ui  TalipotMainWindow.ui
software/talipot/include/: AboutDialog.h  AlgorithmRunner.h  AlgorithmRunnerItem.h  ExpandableGroupBox.h  ExportWizard.h  GraphHierarchiesEditor.h  ImportWizard.h  PanelSelectionWizard.h  PluginErrorReport.h  PluginInformationListItem.h  PluginsCenter.h  PreferencesDialog.h  SearchWidget.h  SplashScreen.h  TalipotLogger.h  TalipotMainWindow.h
software/talipot/resources/style/: talipot.qss  talipotDark.qss
software/talipot/src/: AboutDialog.cpp  AlgorithmRunner.cpp  AlgorithmRunnerItem.cpp  ExpandableGroupBox.cpp  ExportWizard.cpp  GraphHierarchiesEditor.cpp  ImportWizard.cpp  PanelSelectionWizard.cpp  PluginErrorReport.cpp  PluginInformationListItem.cpp  PluginsCenter.cpp  PreferencesDialog.cpp  SearchWidget.cpp  SplashScreen.cpp  TalipotLogger.cpp  TalipotMainWindow.cpp  ThemeUtils.cpp  main.cpp
tests/: CMakeLists.txt
utils/crash_handler/: CMakeLists.txt  CrashHandler.cpp  StackWalker.cpp  UnixSignalInterposer.cpp
(+392 files in other folders)
