[build-system]
requires = ["scikit-build-core", "setuptools-scm", "sip>=6.8.5"]
build-backend = "scikit_build_core.build"

[project]
name = "talipot"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "The Talipot developers", email = "antoine.lambert33@gmail.com" },
]
description = "Large graphs analysis and drawing"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["graph", "algorithms", "visualization", "network"]
classifiers = [
  'Development Status :: 3 - Alpha',

  'Intended Audience :: Developers',
  'Intended Audience :: Education',
  'Intended Audience :: Science/Research',

  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Information Analysis',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Scientific/Engineering :: Visualization',

  'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',

  'Operating System :: POSIX :: Linux',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft :: Windows :: Windows 11',
  'Operating System :: Microsoft :: Windows :: Windows 10',
  'Operating System :: Microsoft :: Windows :: Windows 8',
  'Operating System :: Microsoft :: Windows :: Windows 7',

  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
]
dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/anlambert/talipot"
Issues = "https://github.com/anlambert/talipot"

[tool.scikit-build]
sdist.exclude = [
  "bundlers/",
  "demos/",
  "library/talipot-ogl/",
  "library/talipot-gui/",
  "plugins/glyph/",
  "plugins/interactor/",
  "plugins/view/",
  "software/",
  "screenshots/",
  "thirdparty/QGeoView/",
  "thirdparty/ftgl/",
  "thirdparty/libtess2/",
  "thirdparty/quazip-1.4/",
  "thirdparty/stb/",
  "utils/crash_handler/",
  "utils/git-hooks/",
]
wheel.exclude = [
  "bin/",
  "include/",
  "lib/",
  "share/",
  "**.lib",
  "talipot-config",
]

[tool.scikit-build.cmake.define]
TALIPOT_BUILD_PYTHON_WHEEL = true
TALIPOT_USE_CCACHE = true
TALIPOT_BUILD_CORE_ONLY = true
TALIPOT_BUILD_DOC = false

[tool.scikit-build.metadata]
version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm] # Section required
fallback_version = "0.0.1"
