[build-system]
requires = ["scikit-build-core", "setuptools-scm", "sip>=6.8.5"]
build-backend = "scikit_build_core.build"

[project]
name = "talipot"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "The Talipot developers", email = "antoine.lambert33@gmail.com" },
]
description = "Large graphs analysis and drawing"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["graph", "algorithms", "visualization", "network"]
classifiers = [
  'Development Status :: 3 - Alpha',

  'Intended Audience :: Developers',
  'Intended Audience :: Education',
  'Intended Audience :: Science/Research',

  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Information Analysis',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Scientific/Engineering :: Visualization',

  'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',

  'Operating System :: POSIX :: Linux',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft :: Windows :: Windows 11',
  'Operating System :: Microsoft :: Windows :: Windows 10',
  'Operating System :: Microsoft :: Windows :: Windows 8',
  'Operating System :: Microsoft :: Windows :: Windows 7',

  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
]
dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/anlambert/talipot"
Issues = "https://github.com/anlambert/talipot"

[tool.scikit-build]
strict-config = false
sdist.exclude = [
  ".github/",
  "bundlers/",
  "demos/",
  "library/talipot-ogl/",
  "library/talipot-gui/",
  "library/talipot-python/api",
  "library/talipot-python/designer",
  "library/talipot-python/include/CMakeLists.txt",
  "library/talipot-python/include/talipot/APIDataBase.h",
  "library/talipot-python/include/talipot/AutoCompletionDataBase.h",
  "library/talipot-python/include/talipot/ParenMatcherHighlighter.h",
  "library/talipot-python/include/talipot/PythonCodeEditor.h",
  "library/talipot-python/include/talipot/PythonCodeHighlighter.h",
  "library/talipot-python/include/talipot/PythonEditorsTabWidget.h",
  "library/talipot-python/include/talipot/PythonIDE.h",
  "library/talipot-python/include/talipot/PythonInterpreter.cxx",
  "library/talipot-python/include/talipot/PythonInterpreter.h",
  "library/talipot-python/include/talipot/PythonPipWidget.h",
  "library/talipot-python/include/talipot/PythonPluginCreationDialog.h",
  "library/talipot-python/include/talipot/PythonREPLWidget.h",
  "library/talipot-python/include/talipot/PythonShellWidget.h",
  "library/talipot-python/include/talipot/PythonVersionChecker.h",
  "library/talipot-python/src/APIDataBase.cpp",
  "library/talipot-python/src/AutoCompletionDataBase.cpp",
  "library/talipot-python/src/CMakeLists.txt",
  "library/talipot-python/src/ConsoleHandlers.h",
  "library/talipot-python/src/ConsoleUtilsModule.cpp",
  "library/talipot-python/src/ParenMatcherHighlighter.cpp",
  "library/talipot-python/src/PythonCodeEditor.cpp",
  "library/talipot-python/src/PythonCodeHighlighter.cpp",
  "library/talipot-python/src/PythonEditorsTabWidget.cpp",
  "library/talipot-python/src/PythonIDE.cpp",
  "library/talipot-python/src/PythonInterpreter.cpp",
  "library/talipot-python/src/PythonPipWidget.cpp",
  "library/talipot-python/src/PythonPluginCreationDialog.cpp",
  "library/talipot-python/src/PythonREPLWidget.cpp",
  "library/talipot-python/src/PythonShellWidget.cpp",
  "library/talipot-python/src/PythonTabWidget.cpp",
  "library/talipot-python/src/PythonVersionChecker.cpp",
  "library/talipot-python/src/TalipotUtilsModule.cpp",
  "plugins/colors/DoubleStringsListRelationDialog.h",
  "plugins/colors/DoubleStringsListRelationDialog.cpp",
  "plugins/colors/DoubleStringsListRelationDialog.ui",
  "plugins/export/SVGExport/",
  "plugins/glyph/",
  "plugins/interactor/",
  "plugins/layout/Graphviz/",
  "plugins/clustering/ConvolutionClustering.h",
  "plugins/clustering/ConvolutionClustering.cpp",
  "plugins/clustering/ConvolutionClusteringSetup.h",
  "plugins/clustering/ConvolutionClusteringSetup.cpp",
  "plugins/clustering/ConvolutionClusteringSetup.ui",
  "plugins/utils/InteractorIcons.h",
  "plugins/utils/StandardInteractorPriority.h",
  "software/",
  "screenshots/",
  "tests/",
  "thirdparty/QGeoView/",
  "thirdparty/ftgl/",
  "thirdparty/libtess2/",
  "thirdparty/quazip-1.5/",
  "thirdparty/stb/",
  "utils/crash_handler/",
  "utils/git-hooks/",
  ".clang-format",
  ".cmake-format",
  ".gitignore",
  ".pre-commit-config.yaml",
  "CODE_OF_CONDUCT.md",
  "gcovr.cfg",

]
wheel.exclude = [
  "bin/",
  "include/",
  "lib/",
  "share/",
  "**.lib",
  "talipot-config",
]

[tool.scikit-build.cmake.define]
TALIPOT_BUILD_PYTHON_WHEEL = true
TALIPOT_USE_CCACHE = true
TALIPOT_BUILD_CORE_ONLY = true
TALIPOT_BUILD_DOC = false

[tool.scikit-build.metadata]
version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm] # Section required
fallback_version = "0.0.1"
